slight screen height on mobile fix

--- a/src/scss/game.scss
+++ b/src/scss/game.scss
@@ -17,6 +17,7 @@
     //border: solid red;
     height: 100vh;
     width: 100vw;
+    overflow: hidden;
 
     .content {
       display: flex;
@@ -27,7 +28,7 @@
       width: 100%;
       height: 100%;
       @include xs {
-        gap: 50px;
+        gap: 30px;
       }
       @include sm {
         gap: 15px;
@@ -318,8 +319,9 @@
       //border: solid red;
       width: 100%;
       height: 100%;
+      overflow: hidden;
       @include xs {
-        gap: 50px;
+        gap: 30px;
       }
       @include sm {
         gap: 15px;
