--- a/src/scss/hc-game.scss
+++ b/src/scss/hc-game.scss
@@ -19,6 +19,7 @@
       //border: solid red;
       height: 100vh;
       width: 100vw;
+      overflow: hidden;
 
       .content {
         display: flex;
@@ -29,7 +30,7 @@
         width: 100%;
         height: 100%;
         @include xs {
-          gap: 50px;
+          gap: 30px;
         }
         @include sm {
           gap: 15px;
@@ -310,6 +311,7 @@
       background-color: $bg-dark;
       height: 100vh;
       width: 100vw;
+      overflow: hidden;
 
       .content {
         display: flex;
@@ -320,7 +322,7 @@
         width: 100%;
         height: 100%;
         @include xs {
-          gap: 50px;
+          gap: 30px;
         }
         @include sm {
           gap: 15px;
